fix top align

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
 
 .App > .content {
   grid-area: center;
+  height: 100%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
